# qrf

./: .gitignore  AK0I-missing-parts-state.json  B00I-parts-state.json  PERFORMANCE_DEGRADATION_ANALYSIS.md  README.md  RELEASE_NOTES.md  SECURITY.md  V2_CHANGES_SUMMARY.md  camera-qr-decoder-clean.html  camera-qr-decoder-es5.html  camera-qr-decoder-fixed.html  camera-qr-decoder-fixed.html.bak  camera-qr-decoder-min.html  camera-qr-decoder-working.html  camera-qr-decoder.html  cert.pem  compare_integrity_reports.py  decoder.md  encoder.md  file_comparison_report.json  file_integrity_checker.py  file_splitter.js  file_splitter.py  hierarchical_integrity_checker.js  integrity_check_guide.md  integrity_report_20250830_122132.json  join_files_bat.txt  join_files_sh.txt  key.pem  macos_integrity_dual_algo.json  macos_integrity_dual_algo.txt  macos_integrity_report.json  macos_integrity_report.txt  minimal-qr-decoder-min.html  minimal-qr-decoder.html  missing-files-state.json  optimize.py  paper.md  qb64.html  qr-decoder.html  (+39 more)
qr-video-extractor/: Cargo.toml  PARALLEL_PROCESSING.md  decode_qr_files.js  decode_streaming_qr.js  extract_and_decode.sh  parallel_process.sh  performance_test.sh  process_video_chunks.sh  qr_decoder_interface.html  qr_results.json  vdf-qr-decoder.html
qr-video-extractor/decoded_files/: integrity_report.json
qr-video-extractor/qr-video-extractor/: Cargo.toml
qr-video-extractor/src/: completion_detector.rs  decode_qr_files.rs  error_handler.rs  error_logger.rs  events.rs  file_reconstruction.rs  main.rs  main_simple.rs  qr_extraction.rs  resume_controller.rs  resume_state.rs  test_events.rs  tui.rs  video.rs
qr-video-extractor/video_results/: chunk_001.jsonl  chunk_002.jsonl  chunk_003.jsonl  chunk_004.jsonl  chunk_005.jsonl  chunk_006.jsonl  chunk_007.jsonl  (+2 more)
(+48 files in other folders)
