[package]
name = "qr-video-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1"
rqrr = "0.7"
rayon = "1.8"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"

[build-dependencies]
pkg-config = "0.3"