[package]
name = "qr-video-files"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1"
rqrr = "0.7"
quircs = "0.10"
rayon = "1.8"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
base64 = "0.22"
urlencoding = "2.1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.16"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1.4"
fnv = "1.0"

[[bin]]
name = "qr-video-files"
path = "src/main.rs"

[[bin]]
name = "qr-video-files-simple"
path = "src/main_simple.rs"

[build-dependencies]
pkg-config = "0.3"